ajuste de forma para prueba 1

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>CEMTIR - Centro Médico Holístico | Sé el dueño de tu salud</title>
+    <title>CEMTIR - Centro Médico Holístico | Sé dueño de tu salud</title>
     <meta name="description" content="Centro Médico Holístico, Terapias Integrales y Rehabilitación. Enfoque integral para tu bienestar combinando medicina tradicional con terapias alternativas." />
     <meta name="author" content="CEMTIR" />
 
